# karakeep-client

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .rumdl.toml  AGENTS.md  CHANGELOG  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.specs/changes/archive/2026-02-11-align-build-autodoc/: design.md  proposal.md  tasks.md
.specs/changes/archive/2026-02-11-align-build-autodoc/specs/api-reference-docs-site/: spec.md
.specs/changes/archive/2026-02-11-align-build-autodoc/specs/demo-doc-readiness/: spec.md
.specs/changes/archive/2026-02-11-align-build-autodoc/specs/docat-deployable-output/: spec.md
.specs/changes/archive/2026-02-11-align-build-autodoc/specs/docstring-compliance/: spec.md
.specs/changes/archive/2026-03-30-fix-api-schema-drift/: design.md  proposal.md  tasks.md
.specs/changes/archive/2026-03-30-fix-api-schema-drift/specs/bookmark-operations/: spec.md
.specs/changes/archive/2026-03-30-fix-api-schema-drift/specs/data-models/: spec.md
.specs/changes/archive/2026-03-30-fix-api-schema-drift/specs/tag-management/: spec.md
.specs/schemas/: .schema-sources.yaml  karakeep-api.json
.specs/specs/api-reference-docs-site/: spec.md
.specs/specs/asset-management/: spec.md
.specs/specs/bookmark-operations/: spec.md
.specs/specs/client-lifecycle/: spec.md
.specs/specs/data-models/: spec.md
.specs/specs/demo-doc-readiness/: spec.md
.specs/specs/docat-deployable-output/: spec.md
.specs/specs/docstring-compliance/: spec.md
.specs/specs/tag-management/: spec.md
.specs/specs/url-validation/: spec.md
docs/: docat-handoff.md  index.md  mod.just  overview.md  quickstart.md
docs/reference/: index.md  karakeep.md  models.md
docs/stylesheets/: brand-theme.css
notebooks/: karakeep_client_demo.py
openspec/: config.yaml
openspec/changes/align-build-autodoc/: design.md  proposal.md  tasks.md
openspec/changes/align-build-autodoc/specs/api-reference-docs-site/: spec.md
openspec/changes/align-build-autodoc/specs/docstring-compliance/: spec.md
openspec/changes/archive/2026-02-11-align-build-autodoc/specs/demo-doc-readiness/: spec.md
openspec/changes/archive/2026-02-11-align-build-autodoc/specs/docat-deployable-output/: spec.md
openspec/specs/api-reference-docs-site/: spec.md
openspec/specs/demo-doc-readiness/: spec.md
openspec/specs/docat-deployable-output/: spec.md
openspec/specs/docstring-compliance/: spec.md
src/karakeep_client/: __init__.py  karakeep.py  models.py
tests/: AGENTS.md  test_karakeep.py  test_models.py
