[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"

[project]
name = "karakeep-client"
description = "Python client for Karakeep API"
version = "0.4.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
    # "aiolimiter>=1.2.1",
    "httpx>=0.28.1",
    "pydantic>=2.9.2",
    "python-dateutil>=2.9.0.post0",
    # "requests>=2.32.3",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "uv-ship>=0.3.0",
    "ipykernel>=6.30.1",
    "json-repair>=0.30.3",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "tiktoken>=0.8",
    "tqdm>=4.67.1",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.29.0",
]
lint = [
    "complexipy>=3.0.0",
    "ruff>=0.12.0",
]
test = [
    "coverage>=7.6.9",
    "hypothesis>=6.130.0",
    "pip-audit>=2.10.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "pytest-dependency~=0.6",
    # "pytest-responses>=0.5.1",
    # "responses>=0.25.3",
    "respx>=0.22.0",
]
type = [
    # "types-requests~=2.31",
    "types-tqdm~=4.67",
]

[tool.uv.build-backend]
module-name = "karakeep_client"
module-root = "src/"

[tool.pytest.ini_options]
addopts = '''
    -ra
    --strict-markers
    --ignore=docs/conf.py
    --ignore=setup.py
    --ignore=ci
    --ignore=.eggs
    --import-mode=importlib
    --tb=short
'''
# --doctest-modules
# --doctest-glob=\*.rst
norecursedirs = [
  ".env",
  ".git",
  ".hypothesis",
  ".nox",
  ".pytest_cache",
  ".tox",
  "__pycache__",
  "dist",
  "docs",
  "build",
  "migrations",
  "notebooks",
  "writeup",
]
python_files = [ "test_*.py", "*_test.py", "tests.py" ]
pythonpath = "src"
testpaths = [ "tests" ]
# log_cli = true

[tool.coverage.paths]
source = [ "src", "*/site-packages" ]

[tool.coverage.run]
branch = true
source = [ "src" ]

[tool.coverage.report]
show_missing = true

[tool.uv]
package = true
default-groups = [ "dev", "lint", "test", "type" ]
python-preference = "managed"
exclude-newer = "3 days"

[tool.uv.pip]
prerelease = "if-necessary-or-explicit"

[tool.uv.sources]
karakeep_client = { path = "src/karakeep_client", editable = true }

[tool.uv-ship]
release-branch = "main"
tag-prefix = "v"
allow-dirty = false
changelog-path = "CHANGELOG"
changelog-template = "- {message} [{hash}]"
commit-message = "bump: {old_ver} → {new_ver}"
